--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
